package NonGui.BaseEntity;

public abstract class TriggerCard extends BaseCard {
    public TriggerCard(String name, String flavorText, String abilityDescription, String type){
        super(name, flavorText, abilityDescription, type);
    }
}
